--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,100 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ main {
+   background-color: #f4f1ec;
+   text-align:center;
+ }
+
+ @media screen and (min-width: 1024px){
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  nav {
+    background-color: #4056a1;
+    flex:5%;
+  }
+
+  .wrapper {
+    display: flex;
+    margin-top: 150px;
+    flex:95%;
+    height:100%;
+  }
+
+ 
+  .user-info {
+    display: flex;
+    height: 320px;
+    flex:30%;
+    flex-direction: column;
+    margin:0 8vw 0 2vw ;
+    align-items: center;
+    background-color: #e69809;
+    background-image: url("https://www.transparenttextures.com/patterns/food.png");
+  }
+
+  .user-info .header-img {
+    height: 200px;
+    width: 200px;
+    margin-top: 20px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    flex:60%;
+    margin:0 2vw;
+  }
+}
+
+@media screen and (max-width: 1024px){
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  nav {
+    background-color: #e69809;
+  }
+
+  .user-info {
+    height: 350px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e69809;
+    background-image: url("https://www.transparenttextures.com/patterns/food.png");
+  }
+
+  .user-info img {
+  width: 200px;
+  height: 200px;
+  margin-top: 15px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    flex:60%;
+    margin:5vh 5vw 0 5vw;
+  }
+}
+
+.toTopBtn {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 99;
+
+}
